--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pankaj.in</title>
     <meta name="description" content="Pankaj portfolio website " />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
